Make traces available only for GPR/DZT files; add geodata to a top level SGY file (#327)