@@ -1,9 +1,12 @@
 package com.ugcs.gprvisualizer.app.commands;
 
 import com.github.thecoldwine.sigrun.common.ext.SgyFile;
+import com.github.thecoldwine.sigrun.common.ext.TraceFile;
 import com.ugcs.gprvisualizer.app.ProgressListener;
 import com.ugcs.gprvisualizer.event.WhatChanged;
 import com.ugcs.gprvisualizer.math.LevelFilter;
+
+import java.io.File;
 
 public class LevelClear implements Command {
 
@@ -14,13 +17,12 @@ public class LevelClear implements Command {
 	}
 
 	@Override
-	public void execute(SgyFile file, ProgressListener listener) {
+	public void execute(TraceFile file, ProgressListener listener) {
 		if (levelFilter.getUndoFiles() == null) {
 			return;
 		}
 
-		SgyFile undoFile = levelFilter.getUndoFiles().get(0);
-
+		TraceFile undoFile = levelFilter.getUndoFiles().getFirst();
 		file.setTraces(undoFile.getTraces());
 		levelFilter.setUndoFiles(null);
 
@@ -30,12 +32,10 @@ public class LevelClear implements Command {
 	@Override
 	public String getButtonText() {
 		return "Undo flattening";
-		//return "X";
 	}
 
 	@Override
 	public WhatChanged.Change getChange() {
 		return WhatChanged.Change.traceValues;
 	}
-
 }
